fix website header

--- a/events-slider.html
+++ b/events-slider.html
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    <nav class="navbar py-30 navbar--one navbar-area navbar-expand-lg">
+    <nav class="navbar py-30 navbar--two navbar-area navbar-expand-lg">
         <div class="container nav-container navbar-bg">
             <div class="responsive-mobile-menu">
                 <button class="menu toggle-btn d-block d-lg-none" data-target="#Iitechie_main_menu"
@@ -77,34 +77,19 @@
             <div class="logo">
                 <a href="index.html"><img src="assets/img/logos/logo.png" alt="img"></a>
             </div>
-            <div class="nav-right-part nav-right-part-mobile">
-                <a class="search-bar-btn" href="#">
-                    <i class="flaticon-magnifying-glass"></i>
-                </a>
-            </div>
             <div class="collapse navbar-collapse" id="Iitechie_main_menu">
                 <ul class="navbar-nav menu-open text-lg-end">
-                    <li class="menu-item-has-children">
-                        <a href="#">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Home One</a></li>
-                            <li><a href="index2.html">Home Two</a></li>
-                            <li><a href="index3.html">Home Three</a></li>
-                        </ul>
+                    <li>
+                        <a href="index.html">Home</a>
                     </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Causes</a>
-                        <ul class="sub-menu">
-                            <li><a href="causes.html">Causes</a></li>
-                            <li><a href="causes-slider.html">Causes Slider</a></li>
-                            <li><a href="cause-details.html">Causes Details</a></li>
-                        </ul>
+                    <li>
+                        <a href="causes.html">Causes</a>
                     </li>
                     <li class="menu-item-has-children">
                         <a href="#">Events</a>
                         <ul class="sub-menu">
                             <li><a href="events.html">Events</a></li>
-                            <li><a href="events-slider.html">Event Slider</a></li>
+                            <!-- <li><a href="events-slider.html">Event Slider</a></li> -->
                             <li><a href="event-details.html">Event Details</a></li>
                         </ul>
                     </li>
