--- a/donate.html
+++ b/donate.html
@@ -82,16 +82,11 @@
                     <li>
                         <a href="index.html">Home</a>
                     </li>
-                    <li>
+                <!-- <li>
                         <a href="causes.html">Causes</a>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Events</a>
-                        <ul class="sub-menu">
-                            <li><a href="events.html">Events</a></li>
-                            <!-- <li><a href="events-slider.html">Event Slider</a></li> -->
-                            <li><a href="event-details.html">Event Details</a></li>
-                        </ul>
+                    </li> -->
+                    <li>
+                        <a href="events.html">Events</a>
                     </li>
                     <li> <a href="about.html">About Us</a></li>
                     <li> <a href="donate.html">Donate</a></li> 
