--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="body-overlay" id="body-overlay"></div>
 
     <!-- navbar start -->
-    <div class="navbar-top pt-30 rpt-10 navtop--two">
+    <div class="navbar-top pt-15 pb-10 bgc-black navtop--one">
         <div class="container">
-            <div class="navtop-inner bgc-gray">
+            <div class="navtop-inner bgc-black">
                 <ul class="topbar-left">
                     <li><b>Call now - <a href="callto:9313702100">+919313702100</a></b></li>
                     <li>New Delhi, India 81063</li>
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    <nav class="navbar navbar--two navbar-area navbar-expand-lg">
+    <nav class="navbar navbar--one navbar-area navbar-expand-lg">
         <div class="container nav-container navbar-bg">
             <div class="responsive-mobile-menu">
                 <button class="menu toggle-btn d-block d-lg-none" data-target="#Iitechie_main_menu"
@@ -84,16 +84,11 @@
                     <li>
                         <a href="index.html">Home</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="causes.html">Causes</a>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Events</a>
-                        <ul class="sub-menu">
-                            <li><a href="events.html">Events</a></li>
-                            <!-- <li><a href="events-slider.html">Event Slider</a></li> -->
-                            <li><a href="event-details.html">Event Details</a></li>
-                        </ul>
+                    </li> -->
+                    <li>
+                        <a href="events.html">Events</a>
                     </li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="donate.html">Donate</a></li>
@@ -109,7 +104,7 @@
 
 
     <!-- Hero start -->
-    <div class="hero-area-two bgs-cover overlay py-250" style="background-image: url(assets/img/hero/hero-two.jpg);">
+    <div class="hero-area-two bgs-cover overlay py-250" style="background-image: url(assets/img/hero/hero-two.png);">
         <div class="container">
             <div class="hero-content mt-110 rmt-0 mb-65 text-center text-white rel z-1">
                 <h1>We are Non-Profit & NGO Organization</h1>
@@ -167,18 +162,16 @@
                 <div class="row gap-40 align-items-center">
                     <div class="col-lg-6">
                         <div class="urgent-cause-left-image rmb-65">
-                            <img src="assets/img/causes/urgent-causes-left.png" alt="Causes">
+                            <img src="assets/img/causes/urgent-causes-left.jpg" alt="Causes">
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="urgent-cause-right-content">
                             <div class="section-title mb-30">
                                 <span class="section-title__subtitle mb-30">Urgent cause</span>
-                                <h2>Clean Water for Children <span>in Africa</span></h2>
+                                <h2>Clean Water for Children <span>in India</span></h2>
                             </div>
-                            <p>There are many variations of passages of orem Ipsum available, but the majority have
-                                suffered alteration in some form, by cted ipsum dolor sit amet, consectetur adipisicing
-                                elit, sed do usmod mponcid idunt.</p>
+                            <p>Dedicated initiative in India ensures children access clean water, mitigating waterborne diseases. This vital effort not only improves health but also enhances hygiene, laying the foundation for a healthier and more promising future for the younger generation.</p>
                             <div class="cause-price mt-30">
                                 <span>Raised : $87,689</span>
                                 <span>Goal : $87,689</span>
@@ -265,7 +258,7 @@
                 <div class="col-xl-4 col-md-6">
                     <div class="cause-two-item">
                         <div class="image">
-                            <img src="assets/img/causes/cause-two1.jpg" alt="Cause">
+                            <img src="assets/img/causes/water.jpg" alt="Cause">
                         </div>
                         <div class="content">
                             <div class="circle-progress one">
@@ -286,7 +279,7 @@
                 <div class="col-xl-4 col-md-6">
                     <div class="cause-two-item cause-yellow">
                         <div class="image">
-                            <img src="assets/img/causes/cause-two2.jpg" alt="Cause">
+                            <img src="assets/img/causes/clean.jpg" height="222" alt="Cause">
                         </div>
                         <div class="content">
                             <div class="circle-progress two">
@@ -307,7 +300,7 @@
                 <div class="col-xl-4 col-md-6">
                     <div class="cause-two-item cause-green">
                         <div class="image">
-                            <img src="assets/img/causes/cause-two3.jpg" alt="Cause">
+                            <img src="assets/img/causes/rights.jpg" height="222" alt="Cause">
                         </div>
                         <div class="content">
                             <div class="circle-progress three">
@@ -407,7 +400,7 @@
                 <div class="col-lg-6">
                     <div class="event-two-item">
                         <div class="image">
-                            <img src="assets/img/events/event-two1.jpg" alt="Event">
+                            <img src="assets/img/events/about-left3.jpg" alt="Event">
                         </div>
                         <div class="content">
                             <h5><a href="event-details.html">Food For Hunger</a></h5>
@@ -425,7 +418,7 @@
                 <div class="col-lg-6">
                     <div class="event-two-item event-two-item--green">
                         <div class="image">
-                            <img src="assets/img/events/event-two2.jpg" alt="Event">
+                            <img src="assets/img/events/feature3.jpg" alt="Event">
                         </div>
                         <div class="content">
                             <h5><a href="event-details.html">Adopt a Orphan Child</a></h5>
@@ -443,7 +436,7 @@
                 <div class="col-lg-6">
                     <div class="event-two-item event-two-item--yellow">
                         <div class="image">
-                            <img src="assets/img/events/event-two3.jpg" alt="Event">
+                            <img src="assets/img/events/water.jpg" alt="Event">
                         </div>
                         <div class="content">
                             <h5><a href="event-details.html">Clean Water Event</a></h5>
@@ -461,7 +454,7 @@
                 <div class="col-lg-6">
                     <div class="event-two-item">
                         <div class="image">
-                            <img src="assets/img/events/event-two4.jpg" alt="Event">
+                            <img src="assets/img/events/education.jpg" alt="Event">
                         </div>
                         <div class="content">
                             <h5><a href="event-details.html">Education For Children</a></h5>
@@ -488,8 +481,8 @@
             <div class="row gap-60 align-items-center">
                 <div class="col-lg-6">
                     <div class="volunteer-left-image rel rmb-65">
-                        <img src="assets/img/valunteer/volunteer-left.jpg" alt="valunteer">
-                        <img class="circle" src="assets/img/valunteer/volunteer-left-circle.jpg" alt="valunteer">
+                        <img src="assets/img/valunteer/about-left2.jpg" height="522" alt="valunteer">
+                        <img class="circle" src="assets/img/valunteer/female-volunteer-holding-clothes-donation-box.jpg" height="208" alt="valunteer">
                         <img class="shape top_image_bounce" src="assets/img/shapes/three-round-big-green.png"
                             alt="Shape">
                     </div>
@@ -557,7 +550,7 @@
 
 
     <!-- Volunteer area start -->
-    <div class="volunteer-area-two pt-120 pb-90 rel z-1">
+    <!-- <div class="volunteer-area-two pt-120 pb-90 rel z-1">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 col-md-10">
@@ -616,12 +609,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Volunteer area end -->
 
 
     <!-- Testimonials area start -->
-    <div class="testimonials-area-two pb-120">
+    <!-- <div class="testimonials-area-two pb-120">
         <div class="container">
             <div class="row gap-100 align-items-center">
                 <div class="col-lg-5">
@@ -695,7 +688,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Testimonials area end -->
 
 
@@ -727,7 +720,7 @@
                 <div class="col-lg-6">
                     <div class="faq-video-part rel">
                         <img src="assets/img/video/faq-video.jpg" alt="Video">
-                        <a class="video-play video-play--two" href="https://www.youtube.com/embed/Wimkqo8gDZ0"
+                        <!-- <a class="video-play video-play--two" href="https://www.youtube.com/embed/Wimkqo8gDZ0" -->
                             data-effect="mfp-zoom-in"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
@@ -797,7 +790,7 @@
 
 
     <!-- Blog area start -->
-    <div class="blog-area-two overlay pt-120 pb-90 rel z-1">
+    <!-- <div class="blog-area-two overlay pt-120 pb-90 rel z-1">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-7 col-lg-8 col-md-10">
@@ -875,12 +868,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Blog area end -->
 
 
     <!-- Client Logo area start -->
-    <div class="client-logo-area bgc-lighter py-30">
+    <!-- <div class="client-logo-area bgc-lighter py-30">
         <div class="container">
             <div class="client-logo-wrap">
                 <div class="client-logo-item">
@@ -900,7 +893,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Client Logo area end -->
 
 
@@ -953,18 +946,14 @@
                             <div class="widget widget_gallery">
                                 <h4 class="widget-title">Photo Gallery</h4>
                                 <div class="gallery-photos">
-                                    <a href="assets/img/footer/gallery-two1.jpg"><img
-                                            src="assets/img/footer/gallery-two1.jpg" alt="Gallery"></a>
-                                    <a href="assets/img/footer/gallery-two2.jpg"><img
-                                            src="assets/img/footer/gallery-two2.jpg" alt="Gallery"></a>
-                                    <a href="assets/img/footer/gallery-two3.jpg"><img
-                                            src="assets/img/footer/gallery-two3.jpg" alt="Gallery"></a>
-                                    <a href="assets/img/footer/gallery-two4.jpg"><img
-                                            src="assets/img/footer/gallery-two4.jpg" alt="Gallery"></a>
-                                    <a href="assets/img/footer/gallery-two5.jpg"><img
-                                            src="assets/img/footer/gallery-two5.jpg" alt="Gallery"></a>
-                                    <a href="assets/img/footer/gallery-two6.jpg"><img
-                                            src="assets/img/footer/gallery-two6.jpg" alt="Gallery"></a>
+                                    <a href="assets/img/footer/image1.jpg"><img
+                                            src="assets/img/footer/image2.jpg" alt="Gallery"></a>
+                                    <a href="assets/img/footer/image3.jpg"><img
+                                            src="assets/img/footer/image3.jpg" alt="Gallery"></a>
+                                    <a href="assets/img/footer/image3.jpg"><img
+                                            src="assets/img/footer/image4.jpg" alt="Gallery"></a>
+                                    <a href="assets/img/footer/image4.jpg"><img
+                                            src="assets/img/footer/image4.jpg" alt="Gallery"></a>
                                 </div>
                             </div>
                         </div>
