fix: home changes

--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
             <div class="navtop-inner bgc-black">
                 <ul class="topbar-left">
                     <li><b>Call now - <a href="callto:9313702100">+919313702100</a></b></li>
-                    <li>New Delhi, India 81063</li>
+                    <li>New Delhi, India 110077</li>
                 </ul>
                 <ul class="topbar-right">
                     <li class="social-area">
                         <span>Follow Us - </span>
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     </li>
                 </ul>
@@ -84,15 +83,44 @@
                     <li>
                         <a href="index.html">Home</a>
                     </li>
-                    <!-- <li>
-                        <a href="causes.html">Causes</a>
-                    </li> -->
-                    <li>
-                        <a href="events.html">Events</a>
+                    <li><a href="about.html">About Us</a></li>
+                    <li class="menu-item-has-children">
+                        <a href="causes.html">Activities</a>
+                        <ul class="sub-menu">
+                            <li><a href="index.html">Medical Camps</a></li>
+                            <li><a href="index2.html">School In Rural Area</a></li>
+                            <li><a href="index3.html">Counseling</a></li>
+                            <li><a href="index3.html">Social Welfare Activities</a></li>
+                            <li><a href="index3.html">Pilgrimage for Senior citizens</a></li>
+                            <li><a href="index3.html">Skill Development</a></li>
+                            <li><a href="index3.html">Employment Generation</a></li>
+                        </ul>
                     </li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="donate.html">Donate</a></li>
-                       <li> <a href="contact.html">Contact Us</a></li>   
+                    <li class="menu-item-has-children">
+                        <a href="causes.html">Eco Project</a>
+                        <ul class="sub-menu">
+                            <li><a href="index.html">Plantations</a></li>
+                            <li><a href="index2.html">Urban Terrace Gardens</a></li>
+                            <li><a href="index3.html">Celebrate B’day with Plants</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children">
+                        <a href="events.html">Media</a>
+                        <ul class="sub-menu">
+                            <li><a href="events.html">Photo Gallery</a></li>
+                            <li><a href="events.html">Video Gallery</a></li>
+                            <li><a href="events.html">Credentials</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children">
+                        <a href="donate.html">Join Us</a>
+                        <ul class="sub-menu">
+                            <li><a href="donate.html">As Member</a></li>
+                            <li><a href="donate.html">As Volunteer</a></li>
+                            <li><a href="donate.html">As Donor</a></li>
+                        </ul>
+                    </li>
+                       <li> <a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="nav-right-part nav-right-part-desktop">
@@ -106,10 +134,10 @@
     <!-- Hero start -->
     <div class="hero-area-two bgs-cover overlay py-250" style="background-image: url(assets/img/hero/hero-two.png);">
         <div class="container">
-            <div class="hero-content mt-110 rmt-0 mb-65 text-center text-white rel z-1">
-                <h1>We are Non-Profit & NGO Organization</h1>
+            <div class="hero-content mt-10 rmt-0 mb-65 text-center text-white rel z-1">
+                <h2>SARVAARTH &amp; SEVAARTH FOUNDATION</h2>
                 <div class="hero-btns pt-15 rpt-0">
-                    <a class="btn" href="#">Donate Now</a>
+                    <a class="btn" href="#">Ready To HELP Always in All Ways</a>
                 </div>
                 <img class="hero-shape-two top_image_bounce" src="assets/img/shapes/three-round-green.png" alt="Shape">
             </div>
