--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <div class="container">
             <div class="hero-content mt-10 rmt-0 mb-65 text-center text-white rel z-1">
                 <h2>SARVAARTH &amp; SEVAARTH FOUNDATION</h2>
+                <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5qj556hihuu&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
                 <div class="hero-btns pt-15 rpt-0">
                     <a class="btn" href="#">Ready To HELP Always in All Ways</a>
                 </div>
