--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Charite - Charity & Donation Html Template Contact</title>
+    <title>Sarvaarth & Sevaarth Foundation | Donate Now</title>
     <link rel=icon href="assets/img/favicon.png" sizes="20x20" type="image/png">
 
     <!-- Stylesheet -->
