--- a/contact.html
+++ b/contact.html
@@ -259,7 +259,7 @@
     <div class="contact-page-map wow fadeInUp delay-0-2s">
         <div class="our-location">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d136834.1519573059!2d-74.0154445224086!3d40.7260256534837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1639991650837!5m2!1sen!2sbd"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d28032.009411921656!2d77.05559478342283!3d28.56972738729723!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1b6b3f075b6f%3A0xace2cb3996fc50e7!2sSai%20Kripal%20%26%20Co!5e0!3m2!1sen!2sin!4v1722927279206!5m2!1sen!2sin"
                 style="border:0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
