--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="feature-item--two feature-item--yellow"
                         style="background-image: url(assets/img/features/feature3.jpg);">
                         <div class="feature-item__icon"><i class="flaticon-solidarity"></i></div>
-                        <h4><a href="cause-details.html">Adopt a child</a></h4>
+                        <h4><a href="#">Adopt a child</a></h4>
                         <p>Morem ipsum is simply free text amet consectetuer adipiscing elit.</p>
                         <a class="feature-item__btn" href="#">join us now</a>
                     </div>
@@ -202,8 +202,8 @@
                             </div>
                             <p>Dedicated initiative in India ensures children access clean water, mitigating waterborne diseases. This vital effort not only improves health but also enhances hygiene, laying the foundation for a healthier and more promising future for the younger generation.</p>
                             <div class="cause-price mt-30">
-                                <span>Raised : $87,689</span>
-                                <span>Goal : $87,689</span>
+                                <span>Raised : Rs. 3000</span>
+                                <span>Goal : Rs. 1 Cr.</span>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%">
