--- a/contact.html
+++ b/contact.html
@@ -243,9 +243,9 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="contact-info-item">
                         <div class="contact-info__icon"><i class="flaticon-pin"></i></div>
-                        <h5>Offce address</h5>
+                        <h5>OFFICE ADDRESS</h5>
                         <div class="contact-info__text">
-                            2118 Thornridge Cir. Syracuse <br>Connecticut 35624
+                            RZF-756/48, RAJNAGAR-2, PALAM COLONY, DWARKA SEC-8 <br>NEW DELHI-110077 (INDIA)
                         </div>
                     </div>
                 </div>
