--- a/contact.html
+++ b/contact.html
@@ -225,8 +225,8 @@
                         <div class="contact-info__icon"><i class="flaticon-phone-call"></i></div>
                         <h5>Phone Number</h5>
                         <div class="contact-info__text">
-                            <a href="callto:+(321)984754">+ (321) 984 754</a><br>
-                            <a href="callto:+1-212-9876543">+1-212-9876543</a>
+                            <a href="callto:+(321)984754">+ (91) 9313702100</a><br>
+                            <a href="callto:+1-212-9876543">+ (91) 7011050120</a>
                         </div>
                     </div>
                 </div>
@@ -235,8 +235,8 @@
                         <div class="contact-info__icon"><i class="fas fa-paper-plane"></i></div>
                         <h5>Email Address</h5>
                         <div class="contact-info__text">
-                            <a href="mailto:info1234@gmail.com">info1234@gmail.com</a><br>
-                            <a href="mailto:test1234@gmail.com">test1234@gmail.com</a>
+                            <a href="mailto:info1234@gmail.com">info@sarvaarth.in</a><br>
+                            <a href="mailto:test1234@gmail.com">info.sarvaarth.sevaarth@gmail.com</a>
                         </div>
                     </div>
                 </div>
