--- a/contact.html
+++ b/contact.html
@@ -245,7 +245,7 @@
                         <div class="contact-info__icon"><i class="flaticon-pin"></i></div>
                         <h5>OFFICE ADDRESS</h5>
                         <div class="contact-info__text">
-                            RZF-756/48, RAJNAGAR-2, PALAM COLONY, DWARKA SEC-8 <br>NEW DELHI-110077 (INDIA)
+                            RZF-756/48, RAJNAGAR-2, PALAM COLONY, <br> DWARKA SEC-8, NEW DELHI-110077 (INDIA)
                         </div>
                     </div>
                 </div>
