--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="navtop-inner bgc-black">
                 <ul class="topbar-left">
-                    <li><b>Call now - <a href="callto:9313702100">+919313702100</a></b></li>
+                    <li><b>Call now - <a href="callto:9313702100">+91 9313702100</a></b></li>
                     <li>New Delhi, India 110077</li>
                 </ul>
                 <ul class="topbar-right">
