--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="feature-item--two" style="background-image: url(assets/img/features/feature1.jpg);">
                         <div class="feature-item__icon"><i class="flaticon-help"></i></div>
                         <h4><a href="cause-details.html">Become a volunteer</a></h4>
-                        <p>Morem ipsum is simply free text amet consectetuer adipiscing elit.</p>
+                        <p>If you are aged >18 Years, you can join as a volunteer absolutely FREE</p>
                         <a class="feature-item__btn" href="#">join us now</a>
                     </div>
                 </div>
@@ -163,8 +163,8 @@
                     <div class="feature-item--two feature-item--green"
                         style="background-image: url(assets/img/features/feature2.jpg);">
                         <div class="feature-item__icon"><i class="flaticon-donation"></i></div>
-                        <h4><a href="cause-details.html">Get Involved</a></h4>
-                        <p>Morem ipsum is simply free text amet consectetuer adipiscing elit.</p>
+                        <h4><a href="cause-details.html" > Become a Member</a></h4>
+                        <p>If you are aged > 18 Years, you canbecome a Member for just Rs. 1000/- as Membership Fee</p>
                         <a class="feature-item__btn" href="#">join us now</a>
                     </div>
                 </div>
@@ -172,8 +172,8 @@
                     <div class="feature-item--two feature-item--yellow"
                         style="background-image: url(assets/img/features/feature3.jpg);">
                         <div class="feature-item__icon"><i class="flaticon-solidarity"></i></div>
-                        <h4><a href="#">Adopt a child</a></h4>
-                        <p>Morem ipsum is simply free text amet consectetuer adipiscing elit.</p>
+                        <h4><a href="#">Join Us As Donor</a></h4>
+                        <p>You can join us as a Donor with a minimum donation of Rs.1.00/-</p>
                         <a class="feature-item__btn" href="#">join us now</a>
                     </div>
                 </div>
@@ -198,19 +198,20 @@
                         <div class="urgent-cause-right-content">
                             <div class="section-title mb-30">
                                 <span class="section-title__subtitle mb-30">Urgent cause</span>
-                                <h2>Clean Water for Children <span>in India</span></h2>
+                                <h2>Drishti For All <span>in India</span></h2>
                             </div>
-                            <p>Dedicated initiative in India ensures children access clean water, mitigating waterborne diseases. This vital effort not only improves health but also enhances hygiene, laying the foundation for a healthier and more promising future for the younger generation.</p>
+                            <p>The “DRISHTI FOR ALL” aims to provide life-changing eye surgeries (CATARACT  SURGERIES) to underprivileged and needy patients who cannot afford this essential medical care. Target: 500 Pateints in 5 years. Anybody can donate as per his/her capacity in currency or even sponsor patients @ Rs. 8600 Per Patient.
+                             </p>
                             <div class="cause-price mt-30">
-                                <span>Raised : Rs. 3000</span>
-                                <span>Goal : Rs. 1 Cr.</span>
+                                <span>Raised : Rs. 8600</span>
+                                <span>Goal : Rs. 33,00,000/-</span>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%">
                                 </div>
                             </div>
                             <div class="urgent-cause-btn">
-                                <a class="btn" href="#">Donation now</a>
+                                <a class="btn" href="#">Donate now</a>
                                 <a class="btn btn--green" href="#">Know More</a>
                             </div>
                         </div>
@@ -232,9 +233,9 @@
                             <span class="section-title__subtitle mb-10">About us</span>
                             <h2>Welcome To Our Charity <span>Organization</span></h2>
                         </div>
-                        <p>There are many variations of passages of available but the majority have suffered alteration
-                            in some form, by injected humou ndomised words even slightly believable Making this the
-                            first true.</p>
+                        <p>We are a Non Government Organization (NGO) registered under Societies Registration Act XXI of 1860 founded in Oct 2023 with an only Aim & which is also Organization’s slogan 
+                            “Ready To Help Always In All Ways”. We are working on some specific goals/fields like Medical, Education, Skill Development, Environment & other social welfare activities.
+                            </p>
                         <hr class="mt-40">
                         <div class="about-middle-images">
                             <img src="assets/img/about/about-left1.jpg" alt="About">
@@ -246,12 +247,12 @@
                         </div>
                         <hr>
                         <ul class="list-style-one pt-15">
-                            <li>Consectetur adipiscing elitsed</li>
-                            <li>Nostra dapibus varius et semper</li>
-                            <li>Nullam venenatis ultricies</li>
+                            <li>Medical camps</li>
+                            <li>School In Rural Area</li>
+                            <li>Skill Development</li>
                             <li>Environment For Our Next</li>
-                            <li>Consectetur adipiscing elitsed</li>
-                            <li>Maximus a augue Nullam ante </li>
+                            <li>Employment Generation</li>
+                            <li>Pilgrimage for Senior citizens </li>
                         </ul>
                     </div>
                 </div>
@@ -259,8 +260,8 @@
                     <div class="about-us-image-part mb-65 rel">
                         <img src="assets/img/about/about-right.jpg" alt="About">
                         <div class="experiences-year" style="background-image: url(assets/img/about/experiences.jpg);">
-                            <span class="experiences-year__number">25</span>
-                            <span class="experiences-year__text">Years Experiences</span>
+                            <span class="experiences-year__number">01</span>
+                            <span class="experiences-year__text">Years Experience</span>
                         </div>
                     </div>
                 </div>
@@ -276,10 +277,9 @@
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 col-md-10">
                     <div class="section-title text-center mb-50">
-                        <span class="section-title__subtitle mb-10">Our Causes</span>
+                        <span class="section-title__subtitle mb-10">Our Projects</span>
                         <h3>Our <span>Latest Causes</span></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem autem voluptatem obcaecati
-                            consectetur adipisicing</p>
+                        <p>Presently we are working on 2 projects "Drishti For All" & "Education For All"</p>
                     </div>
                 </div>
             </div>
@@ -293,10 +293,10 @@
                             <div class="circle-progress one">
                                 <b>0</b>
                             </div>
-                            <h4><a href="causes.html">Water For All Children</a></h4>
+                            <h4><a href="causes.html">Drishti For All</a></h4>
                             <div class="cause-price">
-                                <span>Raised : $87,689</span>
-                                <span>Goal : $87,689</span>
+                                <span>Raised : Rs. 8,600/-</span>
+                                <span>Goal : Rs. 33,00,000/-</span>
                             </div>
                             <p>There are many variations of passages of orem Ipsum available, but the majority have</p>
                             <div class="cause-btn">
