--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         style="background-image: url(assets/img/features/feature2.jpg);">
                         <div class="feature-item__icon"><i class="flaticon-donation"></i></div>
                         <h4><a href="cause-details.html" > Become a Member</a></h4>
-                        <p>If you are aged > 18 Years, you canbecome a Member for just Rs. 1000/- as Membership Fee</p>
+                        <p>If you are aged > 18 Years, you can become a Member for just Rs. 1000/- as Membership Fee</p>
                         <a class="feature-item__btn" href="#">join us now</a>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                         style="background-image: url(assets/img/features/feature3.jpg);">
                         <div class="feature-item__icon"><i class="flaticon-solidarity"></i></div>
                         <h4><a href="#">Join Us As Donor</a></h4>
-                        <p>You can join us as a Donor with a minimum donation of Rs.1.00/-</p>
+                        <p>You can join us as a Donor with a minimum donation of Rs.1/-</p>
                         <a class="feature-item__btn" href="#">join us now</a>
                     </div>
                 </div>
@@ -298,9 +298,10 @@
                                 <span>Raised : Rs. 8,600/-</span>
                                 <span>Goal : Rs. 33,00,000/-</span>
                             </div>
-                            <p>There are many variations of passages of orem Ipsum available, but the majority have</p>
+                            <p>Anybody can donate as per his/her capacity in currency or even sponsor patients @ Rs. 8600 Per Patient.
+                            </p></p>
                             <div class="cause-btn">
-                                <a class="btn" href="#">Donation now</a>
+                                <a class="btn" href="#">Donate now</a>
                             </div>
                         </div>
                     </div>
@@ -314,10 +315,10 @@
                             <div class="circle-progress two">
                                 <b>0</b>
                             </div>
-                            <h4><a href="causes.html">Clean Education Help</a></h4>
+                            <h4><a href="causes.html"> Education For All</a></h4>
                             <div class="cause-price cause-price--yellow">
-                                <span>Raised : $95,752</span>
-                                <span>Goal : $100,752</span>
+                                <span>Raised : Rs. 1,00,000/-</span>
+                                <span>Goal : Rs.33,00,000/-</span>
                             </div>
                             <p>There are many variations of passages of orem Ipsum available, but the majority have</p>
                             <div class="cause-btn">
