--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
                                 <span>Raised : Rs. 1,00,000/-</span>
                                 <span>Goal : Rs.33,00,000/-</span>
                             </div>
-                            <p>There are many variations of passages of orem Ipsum available, but the majority have</p>
+                            <p>We are focusing on specifically Quality education in Rural areas. Our basic motto is to provide quality education at very affordable price. It is basically to fill a huge Gap between Schools in Rural villages & private expensive schools. 
+                                Providing education in a very healthy atmosphere to rural children bringing them at a level playing field amongst other private school children.
+                                </p>
                             <div class="cause-btn">
                                 <a class="btn btn--yellow" href="#">Donation now</a>
                             </div>
@@ -336,14 +338,14 @@
                             <div class="circle-progress three">
                                 <b>0</b>
                             </div>
-                            <h4><a href="causes.html">The Right of Childen</a></h4>
+                            <h4><a href="causes.html">Save Environment</a></h4>
                             <div class="cause-price cause-price--green">
-                                <span>Raised : $100,587</span>
-                                <span>Goal : $200,587</span>
+                                <span>Raised : Rs. 0/-</span>
+                                <span>Goal : Rs. 50,00,000/-</span>
                             </div>
-                            <p>There are many variations of passages of orem Ipsum available, but the majority have</p>
+                            <p>We encourage people for more & more plantations in rural as well as urban areas. Also encourage farmers for organic farming.</p>
                             <div class="cause-btn">
-                                <a class="btn btn--green" href="#">Donation now</a>
+                                <a class="btn btn--green" href="#">Donate now</a>
                             </div>
                         </div>
                     </div>
