--- a/contact.html
+++ b/contact.html
@@ -148,8 +148,8 @@
                                 <i class="flaticon-charity"></i>
                             </div>
                             <div class="project-complete__content">
-                                <h5>We Complate 15000+ Project</h5>
-                                <span>Donet for charity</span>
+                                <h5>We Complete 1 Project</h5>
+                                <span>Donate for charity</span>
                             </div>
                         </div>
                     </div>
