--- a/events.html
+++ b/events.html
@@ -50,7 +50,7 @@
             <div class="navtop-inner">
                 <ul class="topbar-left">
                     <li><span>HI</span>, Good Afternoon Dude! </li>
-                    <li><i class="flaticon-pin"></i> Shiloh, Hawaii 81063</li>
+                    <li><i class="flaticon-pin"></i> Dwarka, New Delhi-110077</li>
                 </ul>
                 <ul class="topbar-right">
                     <li class="social-area">
