--- a/donate.html
+++ b/donate.html
@@ -134,23 +134,23 @@
                                 <div class="custom-radio-price">
                                     <div class="radio-item">
                                         <input type="radio" name="donationPrice" id="price50" checked>
-                                        <label for="price50">50$</label>
+                                        <label for="price50">Rs. 1,000</label>
                                     </div>
                                     <div class="radio-item">
                                         <input type="radio" name="donationPrice" id="price100">
-                                        <label for="price100">100$</label>
+                                        <label for="price100">Rs. 2,000</label>
                                     </div>
                                     <div class="radio-item">
                                         <input type="radio" name="donationPrice" id="price200">
-                                        <label for="price200">200$</label>
+                                        <label for="price200">Rs. 3,000</label>
                                     </div>
                                     <div class="radio-item">
                                         <input type="radio" name="donationPrice" id="price300">
-                                        <label for="price300">300$</label>
+                                        <label for="price300">Rs. 4,000</label>
                                     </div>
                                     <div class="radio-item">
                                         <input type="radio" name="donationPrice" id="price400">
-                                        <label for="price400">400$</label>
+                                        <label for="price400">Rs. 5,000</label>
                                     </div>
                                     <div class="radio-item">
                                         <input type="radio" name="donationPrice" id="priceAmount">
