--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
             <div class="navtop-inner">
                 <ul class="topbar-left">
                     <li><span>HI</span>, Good Afternoon Dude! </li>
-                    <li><i class="flaticon-pin"></i> Shiloh, Hawaii 81063</li>
+                    <li><i class="flaticon-pin"></i> Dwarka, New Delhi-110077</li>
                 </ul>
                 <ul class="topbar-right">
                     <li class="social-area">
@@ -204,8 +204,7 @@
                                 <img src="assets/img/logos/logo-white.png" alt="Logo">
                             </a>
                         </div>
-                        <p>Wimply dummy text of the priatype industry orem Ipsum has Maecenas quis eros at ante lacinia
-                            efficitur.</p>
+                        <p>Ready to Help Allways In All Ways...</p>
                         <div class="social-style-one pt-20">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
