--- a/donate.html
+++ b/donate.html
@@ -296,10 +296,10 @@
                                         <img src="assets/img/widgets/cause1.jpg" alt="Cause">
                                     </div>
                                     <div class="content">
-                                        <h6><a href="cause-details.html">Clothes For Everyone</a></h6>
+                                        <h6><a href="cause-details.html">Drishti For All</a></h6>
                                         <div class="cause-price">
-                                            <span><i class="flaticon-line-chart"></i> Raised : $23,785</span>
-                                            <span><i class="flaticon-target"></i> Goal : $87,563</span>
+                                            <span><i class="flaticon-line-chart"></i> Raised : Rs, 8,600/-</span>
+                                            <span><i class="flaticon-target"></i> Goal : Rs, 33,00,000/-</span>
                                         </div>
                                     </div>
                                 </li>
@@ -308,10 +308,10 @@
                                         <img src="assets/img/widgets/cause2.jpg" alt="Cause">
                                     </div>
                                     <div class="content">
-                                        <h6><a href="cause-details.html">New Kindergarten</a></h6>
+                                        <h6><a href="cause-details.html">New Primary School</a></h6>
                                         <div class="cause-price">
-                                            <span><i class="flaticon-line-chart"></i> Raised : $17,568</span>
-                                            <span><i class="flaticon-target"></i> Goal : $20,898</span>
+                                            <span><i class="flaticon-line-chart"></i> Raised : Rs. 1,00,000/-</span>
+                                            <span><i class="flaticon-target"></i> Goal : Rs. 33,00,000/-</span>
                                         </div>
                                     </div>
                                 </li>
@@ -320,10 +320,10 @@
                                         <img src="assets/img/widgets/cause3.jpg" alt="Cause">
                                     </div>
                                     <div class="content">
-                                        <h6><a href="cause-details.html">Food for childen</a></h6>
+                                        <h6><a href="cause-details.html">Save the Climate</a></h6>
                                         <div class="cause-price">
-                                            <span><i class="flaticon-line-chart"></i> Raised : $30,635</span>
-                                            <span><i class="flaticon-target"></i> Goal : $50,658</span>
+                                            <span><i class="flaticon-line-chart"></i> Raised : Rs. 0/-</span>
+                                            <span><i class="flaticon-target"></i> Goal : Rs. 50,00,000/- </span>
                                         </div>
                                     </div>
                                 </li>
@@ -345,7 +345,7 @@
                         </div>
                         <div class="widget widget_cta">
                             <div class="cta-widget-inner" style="background-image: url(assets/img/widgets/cta-bg.jpg);">
-                                <h5>We have provided financial help to 5 million people</h5>
+                                <h5>We have provided help to 200 peoples</h5>
                                 <a class="btn ml-5" href="donate.html">Donate Now</a>
                             </div>
                         </div>
@@ -369,8 +369,7 @@
                                 <img src="assets/img/logos/logo-white.png" alt="Logo">
                             </a>
                         </div>
-                        <p>Wimply dummy text of the priatype industry orem Ipsum has Maecenas quis eros at ante lacinia
-                            efficitur.</p>
+                        <p>Ready for Help Allways in All Ways.</p>
                         <div class="social-style-one pt-20">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
