--- a/about.html
+++ b/about.html
@@ -163,8 +163,8 @@
                                         <i class="flaticon-charity"></i>
                                     </div>
                                     <div class="project-complete__content">
-                                        <h5>We Complate 15000+ Project</h5>
-                                        <span>Donet for charity</span>
+                                        <h5>We Complete 1+ Project</h5>
+                                        <span>Donate for charity</span>
                                     </div>
                                 </div>
                             </div>
@@ -172,7 +172,7 @@
                                 <div class="image mt-65 rmt-15 rel">
                                     <img src="assets/img/about/about2.jpg" alt="About">
                                     <div class="experiences-years">
-                                        <span class="experiences-years__number">25</span>
+                                        <span class="experiences-years__number">01</span>
                                         <span class="experiences-years__text">Years Experiences</span>
                                     </div>
                                 </div>
@@ -187,11 +187,16 @@
                     <div class="about-content-part rmt-65">
                         <div class="section-title mb-60">
                             <span class="section-title__subtitle mb-10">About us</span>
-                            <h2>Check what makes us different <span>than others</span></h2>
+                            <h2> what We Do... <span></span></h2>
                         </div>
-                        <p>There are many variations of passages of orem Ipsum available, but the majority have suffered
-                            alteration in some form, by cted ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                            usmod mponcid idunt ut labore et dolore magna aliqua.</p>
+                        <p>Sarvaarth & Sevaarth Foundation  was created to fill a very important void in the Indian Education, Climate,  Healthcare systems for the needy.  Access to free and timely health care. Our main goal is to provide a safe, affordable, and timely solution to needy citizen. More specifically, to assist those who are deprived from basic healthcare, Medical Treatment and surgery. 
+                            Our most important objective is to protect the poor and needy from lack of Medical Treatment. To offer Free Eye surgeries & offering free spectacles to deprived population. 
+                            We are focusing on specifically Quality education in Rural areas. Our basic motto is to provide quality education at very affordable price. It is basically to fill a huge Gap between Schools in Rural villages & private expensive schools. 
+Providing education in a very healthy atmosphere to rural children bringing them at a level playing field amongst other private school children.
+The first thought of having a NGO, popped her mind 2 years back when her housemaid’s husband suddenly collapsed during ongoing treatment in AIIMS, leaving behind wife (Illiterate) & 2 school going children. After her husband’s sudden death maid was fully broken and then Ms. Meneka Singh stepped out and helped fully & whole heartedly in getting all the claims like PF, LIC, Bank A/c etc to be get settled & then asked her husband Mr. D S Gautam to get her employed in nearby Office of NIMR as contractual worker so that she must at least get some substantial amount to maintain her monthly expenses & apart from all this she started motivating maid’s children to focus on their studies properly and even started giving free tuitions as well.
+Then she discussed her idea with her husband and as he was also soft hearted so he immediately approved the idea without giving it a second thought & started working on this idea and finally “SARVAARTH & SEVAARTH FOUNDATION” took a shape and finally got into existence as an NGO on 4th Oct 2023.
+
+Our President  Ms. Meneka Singh & Secretary Ms. Kusum Rathore (School Principal) has been the backbone of the foundation. Apart from these 2 Ladies Mr. Manoj Singh (Vice President) owner of Sai Eye Care hospital, Lucknow has also showed immense interest in taking up this responsibility of vice president as well as agreed on offering every possible free services through our NGO.
                         <div class="counter-item counter-text-wrap mt-30">
                             <div class="counter-item__icon"><i class="flaticon-solidarity"></i></div>
                             <div class="counter-item__content">
