--- a/donate.html
+++ b/donate.html
@@ -267,7 +267,7 @@
                                     <div class="total-price">
                                         <div class="price-part">
                                             <h5>Total donation</h5>
-                                            <span class="price">$50</span>
+                                            <span class="price">Rs. 5,000/-</span>
                                         </div>
                                         <button type="submit" class="btn ml-5">Donation Now</button>
                                     </div>
